--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -237,7 +237,7 @@
                   </select>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-text m-0 mt-1 p-2">ID do Desenvolvedor<span>&emsp;&emsp;</span></label>
+                  <label class="form-text m-0 mt-1 p-2">ID do Desenvolvedor:<span>&nbsp;&nbsp;&nbsp;&emsp;</span></label>
                   <select class="form-select modal-field text-white" id="selectIdDesenvolvedor" required></select>
                   <!-- <input type="number" class="form-control modal-field text-white" required> -->
                 </div>
