--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -13,7 +13,7 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8" />
@@ -39,7 +39,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.8/sweetalert2.css"
     integrity="sha512-n7nFZrzrpAWFDeQpyGwpH2W6maWlysBPf0cP5qf0xntjmH6R1QDg3ABfRVj7dTHWDmcTfLzmAG9PDPDdVd6odQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Datatables -->
-  <link href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css" rel="stylesheet">
+  <link href="../assets/css/jquery.dataTables.css" rel="stylesheet">
 </head>
 
 <body class="g-sidenav-show  bg-gray-200 dark-version">
@@ -251,46 +251,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="modal" id="modalAtualizarDemanda">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-          <div class="card z-index-2">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
-                <header class="modal-header">
-                  <h2 class="text-white font-weight-bolder text-center mb-0">Atualizar Demanda</h2>
-                  <button class="btn bg-gradient-danger modal-close m-0 p-2" id="modalCloseAtualizarDemanda">&#10006;</button>
-                </header>
-              </div>
-            </div>
-            <div class="card-body px-3 py-1">
-              <form class="modal-form" id="formulario-atualizacao-demanda">
-                <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Nome do Cliente</label>
-                  <input type="text" class="form-control modal-field">
-                </div>
-                <div class="input-group input-group-outline my-3">
-                  <label class="form-label">E-mail do Cliente</label>
-                  <input type="email" class="form-control modal-field">
-                </div>
-                <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Celular do Cliente</label>
-                  <input type="text" class="form-control modal-field">
-                </div>
-                <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Cidade do Cliente</label>
-                  <input type="text" class="form-control modal-field">
-                </div>
-              </form>
-              <footer class="modal-footer">
-                <button class="btn bg-gradient-success my-2 mx-1" id="salvarAtualizarDemanda">Salvar</button>
-                <button class="btn bg-gradient-danger my-2 mx-1" id="cancelarAtualizarDemanda">Cancelar</button>
-              </footer>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </main>
   <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js"></script>
