--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -225,15 +225,15 @@
                 </div>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-label">Complexidade Horas</label>
-                  <input type="text" class="form-control modal-field text-white" required>
+                  <input type="number" class="form-control modal-field text-white" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text m-0 mt-1 p-2">Status da Demanda:<span>&emsp;&emsp;</span></label>
                   <select class="form-select modal-field text-white" id="selectStatus" required>
-                    <option value="Em Fila">Em Fila</option>
-                    <option value="Em Andamento">Em Andamento</option>
-                    <option value="Atendidas">Atendidas</option>
-                    <option value="Paralizadas">Paralizadas</option>
+                    <option value="EM FILA">Em Fila</option>
+                    <option value="EM ANDAMENTO">Em Andamento</option>
+                    <option value="ATENDIDA">Atendida</option>
+                    <option value="PARALIZADA">Paralizada</option>
                   </select>
                 </div>
                 <div class="input-group input-group-outline my-3">
