--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -193,7 +193,7 @@
         </div>
       </footer>
     </div>
-    <div class="modal" id="modalCadastrarDemanda">
+    <div class="modal" id="modalDemanda">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-transparent">
           <div class="card z-index-2">
@@ -201,35 +201,35 @@
               <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
                 <header class="modal-header">
                   <h2 class="text-white font-weight-bolder text-center mb-0" id="tituloModal"></h2>
-                  <button class="btn bg-gradient-danger modal-close m-0 p-2" id="modalCloseCadastrarDemanda">&#10006;</button>
+                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelarDemanda">&#10006;</button>
                 </header>
               </div>
             </div>
             <div class="card-body px-3 py-1">
               <form class="modal-form" id="formulario-cadastro-demanda">
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Nome da Demanda</label>
-                  <input type="text" class="form-control modal-field text-white" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Nome da Demanda:<span>&emsp;&emsp;&nbsp;&nbsp;&nbsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="nomeDemanda" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-text m-0 mt-1 p-2">Início do Atendimento:<span>&nbsp;&emsp;</span></label>
-                  <input type="datetime-local" class="form-control modal-field text-white" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Início do Atendimento:<span>&emsp;&nbsp;</span></label>
+                  <input type="datetime-local" class="form-control modal-field text-white" id="inicioAtendimento" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-text m-0 mt-1 p-2">Término do Atendimento:</label>
-                  <input type="datetime-local" class="form-control modal-field text-white" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Término do Atendimento:</label>
+                  <input type="datetime-local" class="form-control modal-field text-white" id="fimAtendimento" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Tipo de Demanda</label>
-                  <input type="text" class="form-control modal-field text-white" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Tipo de Demanda:<span>&emsp;&emsp;&emsp;&nbsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="tipoDemanda" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-label">Complexidade Horas</label>
-                  <input type="number" class="form-control modal-field text-white" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Complexidade Horas:<span>&emsp;&nbsp;&nbsp;&nbsp;</span></label>
+                  <input type="number" class="form-control modal-field text-white" id="complexidadeHoras" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-text m-0 mt-1 p-2">Status da Demanda:<span>&emsp;&emsp;</span></label>
-                  <select class="form-select modal-field text-white" id="selectStatus" required>
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Status da Demanda:<span>&emsp;&emsp;&nbsp;</span></label>
+                  <select class="form-select modal-field text-white" id="statusDemanda" required>
                     <option value="EM FILA">Em Fila</option>
                     <option value="EM ANDAMENTO">Em Andamento</option>
                     <option value="ATENDIDA">Atendida</option>
@@ -237,13 +237,12 @@
                   </select>
                 </div>
                 <div class="input-group input-group-outline my-3">
-                  <label class="form-text m-0 mt-1 p-2">ID do Desenvolvedor:<span>&nbsp;&nbsp;&nbsp;&emsp;</span></label>
-                  <select class="form-select modal-field text-white" id="selectIdDesenvolvedor" required></select>
-                  <!-- <input type="number" class="form-control modal-field text-white" required> -->
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">ID do Desenvolvedor:<span>&emsp;&nbsp;&nbsp;&nbsp;</span></label>
+                  <select class="form-select modal-field text-white" id="idDesenvolvedor" required></select>
                 </div>
                 <footer class="modal-footer">
-                  <button class="btn bg-gradient-success my-2 mx-1" id="salvarCadastrarDemanda">Salvar</button>
-                  <button class="btn bg-gradient-danger my-2 mx-1" id="cancelarCadastrarDemanda" type="reset">Cancelar</button>
+                  <button class="btn bg-gradient-success my-2 mx-1" id="salvarDemanda">Salvar</button>
+                  <button class="btn bg-gradient-danger my-2 mx-1 cancelarDemanda" type="reset">Cancelar</button>
                 </footer>
               </form>
             </div>
