Atualização na criação do objeto de cadastro e atualização, cor dos botões de paginação

--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -209,15 +209,15 @@
               <form class="modal-form" id="formulario-cadastro-demanda">
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text font-weight-bolder m-0 mt-1 p-2">Nome da Demanda:<span>&emsp;&emsp;&nbsp;&nbsp;&nbsp;</span></label>
-                  <input type="text" class="form-control modal-field text-white" required>
+                  <input type="text" class="form-control modal-field text-white" id="idCadastroDemanda" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text font-weight-bolder m-0 mt-1 p-2">Tipo de Demanda:<span>&emsp;&emsp;&emsp;&nbsp;</span></label>
-                  <input type="text" class="form-control modal-field text-white" required>
+                  <input type="text" class="form-control modal-field text-white" id="tipoCadastroDemanda" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text font-weight-bolder m-0 mt-1 p-2">ID do Desenvolvedor:<span>&emsp;&nbsp;&nbsp;&nbsp;</span></label>
-                  <select class="form-select modal-field text-white listaDev" id="idDesenvolvedor" required></select>
+                  <select class="form-select modal-field text-white listaDev" id="idCadastroDesenvolvedor" required></select>
                 </div>
                 <footer class="modal-footer">
                   <button class="btn bg-gradient-success my-2 mx-1" id="salvarDemanda">Salvar</button>
