--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -201,7 +201,7 @@
               <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
                 <header class="modal-header">
                   <h2 class="text-white font-weight-bolder text-center mb-0">Nova Demanda</h2>
-                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelarDemanda">&#10006;</button>
+                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelar">&#10006;</button>
                 </header>
               </div>
             </div>
@@ -209,7 +209,7 @@
               <form class="modal-form" id="formulario-cadastro-demanda">
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text font-weight-bolder m-0 mt-1 p-2">Nome da Demanda:<span>&emsp;&emsp;&nbsp;&nbsp;&nbsp;</span></label>
-                  <input type="text" class="form-control modal-field text-white" id="idCadastroDemanda" required>
+                  <input type="text" class="form-control modal-field text-white" id="nomeCadastroDemanda" required>
                 </div>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-text font-weight-bolder m-0 mt-1 p-2">Tipo de Demanda:<span>&emsp;&emsp;&emsp;&nbsp;</span></label>
@@ -220,8 +220,8 @@
                   <select class="form-select modal-field text-white listaDev" id="idCadastroDesenvolvedor" required></select>
                 </div>
                 <footer class="modal-footer">
-                  <button class="btn bg-gradient-success my-2 mx-1" id="salvarDemanda">Salvar</button>
-                  <button class="btn bg-gradient-danger my-2 mx-1 cancelarDemanda" type="reset">Cancelar</button>
+                  <button class="btn bg-gradient-success my-2 mx-1" id="salvarDemanda" type="submit">Salvar</button>
+                  <button class="btn bg-gradient-danger my-2 mx-1 cancelar" type="reset">Cancelar</button>
                 </footer>
               </form>
             </div>
@@ -237,7 +237,7 @@
               <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
                 <header class="modal-header">
                   <h2 class="text-white font-weight-bolder text-center mb-0">Atualizar Demanda</h2>
-                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelarDemanda">&#10006;</button>
+                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelar">&#10006;</button>
                 </header>
               </div>
             </div>
@@ -281,8 +281,51 @@
                   <select class="form-select modal-field text-white listaDev" id="idDesenvolvedor" required></select>
                 </div>
                 <footer class="modal-footer">
-                  <button class="btn bg-gradient-success my-2 mx-1" id="atualizarDemanda">Atualizar</button>
-                  <button class="btn bg-gradient-danger my-2 mx-1 cancelarDemanda" type="reset">Cancelar</button>
+                  <button class="btn bg-gradient-success my-2 mx-1" id="atualizarDemanda" type="submit">Atualizar</button>
+                  <button class="btn bg-gradient-danger my-2 mx-1 cancelar" type="reset">Cancelar</button>
+                </footer>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal" id="modalAvaliarDemanda">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-transparent">
+          <div class="card z-index-2">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
+              <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
+                <header class="modal-header">
+                  <h2 class="text-white font-weight-bolder text-center mb-0">Avaliação Demanda</h2>
+                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelar">&#10006;</button>
+                </header>
+              </div>
+            </div>
+            <div class="card-body px-3 py-1">
+              <form class="modal-form" id="formulario-avaliacao-demanda">
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">ID da Demanda:<span>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="idDemandaAvaliacao" readonly>
+                </div>
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2" for="qualidadeAtendimento">Qualidade do Atendimento:<span>&emsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="valorRange1" value="1" readonly>
+                  <input type="range" class="form-range" id="qualidadeAtendimento" value="1" min="1" max="6" required>
+                </div>
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Tempo do Atendimento:<span>&emsp;&emsp;&nbsp;&nbsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="valorRange2" value="1" readonly>
+                  <input type="range" class="form-range" id="tempoAtendimento" value="1" min="1" max="6" required>
+                </div>
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-text font-weight-bolder m-0 mt-1 p-2">Qualidade Técnica do Dev:<span>&emsp;&nbsp;&nbsp;</span></label>
+                  <input type="text" class="form-control modal-field text-white" id="valorRange3" value="1" readonly>
+                  <input type="range" class="form-range" id="qualidadeTecnicaDev" value="1" min="1" max="6" required>
+                </div>
+                <footer class="modal-footer">
+                  <button class="btn bg-gradient-success my-2 mx-1" id="avaliarDemanda" type="submit">Avaliar</button>
+                  <button class="btn bg-gradient-danger my-2 mx-1 cancelar" type="reset">Cancelar</button>
                 </footer>
               </form>
             </div>
