--- a/pages/demanda.html
+++ b/pages/demanda.html
@@ -148,16 +148,33 @@
           <div class="card">
             <div class="card-header p-3 pt-2">
               <div
-                class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
-                <i class="material-icons opacity-10">person</i>
+                class="icon icon-lg icon-shape bg-gradient-dark shadow-info text-center border-radius-xl mt-n4 position-absolute">
+                <i class="material-icons opacity-10">add</i>
               </div>
-              <div class="text-end pt-1">
+              <div class="text-end pt-2 mt-2">
                 <h4 class="mb-0">Cadastar<br>Demanda</h4>
               </div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3 d-flex flex-column justify-content-lg-center">
               <button type="button" class="btn bg-gradient-success my-2" id="cadastrarDemanda">Cadastar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-sm-4 mb-xl-0 mb-4">
+          <div class="card">
+            <div class="card-header p-3 pt-2">
+              <div
+                class="icon icon-lg icon-shape bg-gradient-dark shadow-info text-center border-radius-xl mt-n4 position-absolute">
+                <i class="material-icons opacity-10">format_list_bulleted</i>
+              </div>
+              <div class="text-end pt-2 mt-2">
+                <h4 class="mb-0">Demandas<br>Sem Avaliação</h4>
+              </div>
+            </div>
+            <hr class="dark horizontal my-0">
+            <div class="card-footer p-3 d-flex flex-column justify-content-lg-center">
+              <button type="button" class="btn bg-gradient-success my-2" id="semAvaliacao">Listar</button>
             </div>
           </div>
         </div>
@@ -192,6 +209,8 @@
         </div>
       </footer>
     </div>
+
+    <!-- MODAL CADASTRAR DEMANDA -->
     <div class="modal" id="modalCadastarDemanda">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-transparent">
@@ -228,6 +247,8 @@
         </div>
       </div>
     </div>
+
+    <!-- MODAL ATUALIZAR DEMANDA -->
     <div class="modal" id="modalAtualizarDemanda">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-transparent">
@@ -289,6 +310,8 @@
         </div>
       </div>
     </div>
+
+    <!-- MODAL AVALIAR DEMANDA -->
     <div class="modal" id="modalAvaliarDemanda">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-transparent">
@@ -332,7 +355,32 @@
         </div>
       </div>
     </div>
+
+    <!-- MODAL LISTAR DEMANDA SEM AVALIAÇÃO -->
+    <div class="modal" id="modalSemAvaliacao">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-transparent">
+          <div class="card z-index-2">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
+              <div class="bg-gradient-info shadow-info border-radius-lg py-3 pe-1">
+                <header class="modal-header">
+                  <h2 class="text-white font-weight-bolder text-center mb-0">Demandas Sem Avaliação</h2>
+                  <button class="btn bg-gradient-danger modal-close m-0 p-2 cancelar">&#10006;</button>
+                </header>
+              </div>
+            </div>
+            <div class="card-body px-3 py-1">
+              <table class="table align-items-center mb-0" id="registroSemAvaliacao"></table>
+              <footer class="modal-footer">
+                <button class="btn bg-gradient-danger my-2 mx-1 cancelar">Fechar</button>
+              </footer>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
+
   <!--   Core JS Files   -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
